timezone bug fixed

--- a/LeagueScheduler31/Views/Admin/Index.cshtml
+++ b/LeagueScheduler31/Views/Admin/Index.cshtml
@@ -5,5 +5,5 @@
 
 
 @section Scripts {
-    <script type="text/javascript" src="~/Scripts/require.js" data-main="app-admin/main"></script>
+    <script type="text/javascript" src="~/Scripts/require.js" data-main="/app-admin/main"></script>
 }
