--- a/LeagueScheduler31/app-admin/views/leagues.html
+++ b/LeagueScheduler31/app-admin/views/leagues.html
@@ -33,8 +33,8 @@
                 <!--<button class="btn btn-danger" data-bind="click: $parent.deleteItem">Delete</button>-->
                 <button class="btn btn-warning" data-bind="click: archive, visible: !isArchived()">Archive</button>
                 <button class="btn btn-warning" data-bind="click: unarchive, visible: isArchived">Un-Archive</button>
-                <a class="btn btn-link" target="_blank" data-bind="visible: isDirty, attr: { href: id() + '/preview' }">Preview League Site</a>
-                <a class="btn btn-link" target="_blank" data-bind="attr: { href: id }">View League Site</a>
+                <a class="btn btn-link" target="_blank" data-bind="visible: isDirty, attr: { href: 'http://elite-schedule.net/' + id() + '/preview' }">Preview League Site</a>
+                <a class="btn btn-link" target="_blank" data-bind="attr: { href: 'http://elite-schedule.net/' + id() }">View League Site</a>
             </td>
         </tr>
     </script>
