--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/lib/fullcalendar/fullcalendar.css" />
     <link rel="stylesheet" href="/lib/bootstrap/dist/css-themes/bootstrap.united.min.css" />
     @*<link rel="stylesheet" href="/lib/angular-ui-select/dist/select.min.css">*@
-    @*<link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.min.css"/>*@
-    <link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.css" />
+    <link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.min.css"/>
+    @*<link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.css" />*@
     <link rel="stylesheet" href="/Content/font-awesome.min.css" />
     <link rel="stylesheet" href="/content/site.css">
     <link rel="stylesheet" href="/content/custom.css">
@@ -39,7 +39,8 @@
     <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
     @*<script src="~/lib/angular-ui-grid/ui-grid.min.js"></script>*@
-    <script src="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.js"></script>
+    <script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>
+    @*<script src="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.js"></script>*@
     <script src="~/lib/csv-js/csv.js"></script>
     <script src="~/lib/angular-ui-calendar/src/calendar.js"></script>
     <script src="~/lib/fullcalendar/fullcalendar.min.js"></script>
