fixed ui-grid version (temporary hack)

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -38,8 +38,8 @@
     @*<script src="/lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>*@
     <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
-    @*<script src="~/lib/angular-ui-grid/ui-grid.min.js"></script>*@
-    <script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>
+    <script src="~/lib/angular-ui-grid/ui-grid.min.js"></script>
+    @*<script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>*@
     @*<script src="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.js"></script>*@
     <script src="~/lib/csv-js/csv.js"></script>
     <script src="~/lib/angular-ui-calendar/src/calendar.js"></script>
