--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -11,6 +11,7 @@
     @*<link rel="stylesheet" href="/lib/angular-ui-select/dist/select.min.css">*@
     <link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.min.css"/>
     @*<link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.css" />*@
+    <link rel="stylesheet" href="~/lib/angular-ui-select/dist/select.min.css" />
     <link rel="stylesheet" href="/Content/font-awesome.min.css" />
     <link rel="stylesheet" href="/content/site.css">
     <link rel="stylesheet" href="/content/custom.css">
@@ -34,7 +35,7 @@
     <script src="/lib/angular-route/angular-route.min.js"></script>
     <script src="/lib/angular-animate/angular-animate.min.js"></script>
     <script src="~/lib/angular-touch/angular-touch.min.js"></script>
-    @*<script src="/lib/angular-sanitize/angular-sanitize.min.js"></script>*@
+    <script src="/lib/angular-sanitize/angular-sanitize.min.js"></script>
     @*<script src="/lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>*@
     <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -44,6 +45,7 @@
     <script src="~/lib/csv-js/csv.js"></script>
     <script src="~/lib/angular-ui-calendar/src/calendar.js"></script>
     <script src="~/lib/fullcalendar/fullcalendar.min.js"></script>
+    <script src="~/lib/angular-ui-select/dist/select.min.js"></script>
 
     @*<script src="/lib/angular-ui-select/dist/select.min.js"></script>*@
     <script src="/lib/showdown/compressed/showdown.js"></script>
