added ability to see open time slots

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -64,11 +64,13 @@
     <script src="/app-ngadmin/services/elite-api.service.js"></script>
     <script src="~/app-ngadmin/services/dialogs.service.js"></script>
     <script src="~/app-ngadmin/services/app-spinner.service.js"></script>
+    <script src="~/app-ngadmin/services/state-watcher.service.js"></script>
     <script src="~/app-ngadmin/slots/slots-initial-data.service.js"></script>
     <script src="~/app-ngadmin/generation/generation.service.js"></script>
     <script src="~/app-ngadmin/games/games.controller.js"></script>
     <script src="~/app-ngadmin/games/edit-game.controller.js"></script>
     <script src="~/app-ngadmin/games/edit-scores.controller.js"></script>
+    <script src="~/app-ngadmin/games/opponent-matrix.controller.js"></script>
     <script src="~/app-ngadmin/games/games-initial-data.service.js"></script>
     <script src="~/app-ngadmin/services/utils.service.js"></script>
     <script src="~/app-ngadmin/services/league-validator.service.js"></script>
