--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -72,6 +72,7 @@
     <script src="~/app-ngadmin/games/edit-scores.controller.js"></script>
     <script src="~/app-ngadmin/games/opponent-matrix.controller.js"></script>
     <script src="~/app-ngadmin/games/games-initial-data.service.js"></script>
+    <script src="~/app-ngadmin/main/main.controller.js"></script>
     <script src="~/app-ngadmin/services/utils.service.js"></script>
     <script src="~/app-ngadmin/services/league-validator.service.js"></script>
 
