--- a/LeagueScheduler31/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/LeagueScheduler31/Views/Account/ExternalLoginConfirmation.cshtml
@@ -29,6 +29,7 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
+    @Html.HiddenFor(m => m.Email)
 }
 
 @section Scripts {
