--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -75,6 +75,7 @@
     <script src="~/app-ngadmin/main/main.controller.js"></script>
     <script src="~/app-ngadmin/services/utils.service.js"></script>
     <script src="~/app-ngadmin/services/league-validator.service.js"></script>
+    <script src="~/app-ngadmin/services/user-data.service.js"></script>
 
     <script src="~/app-ngadmin/shared/confirm-modal.controller.js"></script>
     <script src="~/app-ngadmin/directives/spinner.directive.js"></script>
